adduser (3.77.0) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Marc Haber <mh+debian-packages@zugschlus.de>  Sun, 23 Oct 2005 18:51:29 +0000

adduser (3.77) unstable; urgency=low

  [ Marc Haber ]
  * call make -C po update clean in debian/rules clean.
    Thanks to Eduard Bloch. (mh)
  * invoke debconf-updatepo and po4a in clean target.
    Thanks to Thomas Huriaux. (mh)

  [ Joerg Hoh ]
  * fixed bug in deluser which made not specified parameters valid
  * backup files for users have a mask of 600 and ownership is set to root
    only (Closes: #331720)

 -- Marc Haber <mh+debian-packages@zugschlus.de>  Sun, 23 Oct 2005 18:41:21 +0000

adduser (3.76) experimental; urgency=low

  * use xgettext -kgtx instead of -k_ to de-confuse xgettext

 -- Marc Haber <mh+debian-packages@zugschlus.de>  Sat, 22 Oct 2005 19:11:54 +0000

adduser (3.75) experimental; urgency=low

  * apply patch from Thomas Huriaux to re-work manpage generation:
    * remove doc/*.es_ES
    * remove doc/outdated/
    * create and populate doc/po4a/po
    * add the addenda to doc/po4a directory
    * modify the doc/po4a.conf file.
    * adapt debian/rules
    (mh) Closes: #335196.
  * Changes suggested by Denis Barbier
    * use YESEXPR in the yes/no question to help with non-english
      languages
    * call xgettext -c in po/Makefile
    * Eliminate concatenated msgids building full sentences.
    (mh) This hopefully solves #224301.
  * Minor string changes. (mh)

 -- Marc Haber <mh+debian-packages@zugschlus.de>  Sat, 22 Oct 2005 19:02:52 +0000

adduser (3.74) unstable; urgency=low

  * Update German (de) debconf translation.
    Thanks to Daniel Knabl. (mh) Closes: #326136
  * Fix wrong bug number in 3.72 changelog regarding #333384.

 -- Marc Haber <mh+debian-packages@zugschlus.de>  Thu, 20 Oct 2005 16:03:59 +0000

adduser (3.73) unstable; urgency=low

  * make adduser consistent with documentation again. The option is
    --disabled-password, not --disabled-passwd or --disabled_password.