@@ -401,7 +401,7 @@ sub version {
 
     printf gtx("Copyright (C) 2000 Roland Bauerschmidt <roland\@copyleft.de>\n\n");
 
-    printf gtx("deluser is based on adduser by Guy Maor <maor\@debian.org>, Ian Murdock\n",
+    printf gtx("deluser is based on adduser by Guy Maor <maor\@debian.org>, Ian Murdock\n".
 	  "<imurdock\@gnu.ai.mit.edu> and Ted Hajek <tedhajek\@boombox.micro.umn.edu>\n");
 
     printf gtx("\nThis program is free software; you can redistribute it and/or modify
